# PsyFlow

./: .eslintrc.js  .gitignore  dev.db  index.html  package-lock.json  package.json  postcss.config.mjs  prisma.config.ts  tailwind.config.js  tsconfig.electron.json  tsconfig.json  vite.config.ts
app/: main.ts
app/backend/: index.js  index.ts
app/backend/lib/: prisma.js  prisma.ts
app/backend/repositories/: PatientRepository.ts  SettingsRepository.ts  UserRepository.js  UserRepository.ts
app/backend/services/: AuthService.js  AuthService.ts  PatientService.ts  SettingsService.ts
app/backend/utils/: AppError.js  AppError.ts  logger.js  logger.ts
app/electron/main/: main.ts
app/electron/main/ipc/: authIPC.ts  patientIPC.ts  settingsIPC.ts
app/electron/preload/: preload.ts
app/frontend/: App.tsx  index.html  postcss.config.cjs  tsconfig.json
app/frontend/assets/: global.css
app/frontend/components/: Input.tsx  Modal.tsx
app/frontend/pages/: Dashboard.tsx  Login.tsx  Patients.tsx
app/frontend/types/: window.d.ts
app/prisma/: schema.prisma
app/prisma/migrations/20260128174915_init_structure/: migration.sql
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  models.rs
src/assets/: global.css
src/components/: Button.tsx  Card.tsx  Input.tsx
src/pages/: Dashboard.tsx  Login.tsx  PatientDetails.tsx  Patients.tsx
src/services/: api.ts
src/types/: tauri.d.ts
