[package]
name = "psyflow"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# --- ADIÇÃO CRÍTICA ABAIXO ---
# Isso diz ao Rust que sua biblioteca se chama "app_lib", 
# permitindo que o main.rs a encontre.
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
# -----------------------------

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-log = "2.0.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
bcrypt = "0.15"
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
